Fixed page being too tall by default

--- a/css/main.css
+++ b/css/main.css
@@ -175,8 +175,7 @@ body {
 #text-area {
     float: left;
     margin-top: 90px;
-    margin-bottom: 50px;
-    height: 100%;
+    height: 70%;
 }
 
 #right-pane {
@@ -240,7 +239,7 @@ body {
 /* Text editor */
 
 #editor {
-    height: 70%;
+    height: 100%;
     max-width: 800px;
     width: 800px;
     background-color: white;
